files/productpage-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: productpage
    service: productpage
  name: productpage
spec:
  host: productpage-bookinfo.apps.cluster-a2e6.a2e6.sandbox1559.opentlc.com
  port:
    targetPort: http
  to:
    kind: Service
    name: productpage
    weight: 100
  wildcardPolicy: None
